Hopefully fix contrast issue

--- a/css/course_portal.css
+++ b/css/course_portal.css
@@ -18,7 +18,7 @@ body {
   box-shadow: 5px 5px 15px 5px #000000;
 }
 footer{
-  background-color: #2f8ac6;
+  background-color: #155f91;
   color:white;
   padding: 20px 10px 20px 10px;
   text-align:center;
@@ -29,7 +29,7 @@ footer a{
  color:white;
 }
 header{
-  background-color: #2f8ac6;
+  background-color: #155f91;
   color:white;
   margin-top: 0%;
   margin-bottom: 0%;
